# MLops_labss

mlops_project1/: .env  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  example1.py  mypy.ini  params.yml  pipeline.sh  pyproject.toml  requirements.txt  script.py
mlops_project1/bash/: download.sh  process.sh  train.sh  upload.sh  upload_process.sh
mlops_project1/docs/: mkdocs.yml
mlops_project1/docs/docs/: index.md
mlops_project1/lab3/: bucket_create.py  data_download.py  data_preprocessing.py  data_upload.py  pipeline.sh
mlops_project1/lab3/bashscript/: download.sh  process.sh  upload.sh  upload_process.sh
mlops_project1/mlops_labs2024/: __init__.py  create_bucket.py  data_download.py  data_preprocessing.py  data_upload.py  dataset.py  features.py  plots.py
mlops_project1/mlops_labs2024/modeling/: predict.py  train.py
